// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:LinkInternal matches the snapshot when format is desktopFooter 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  font-size: 18px;
  height: 25px;
  margin-left: 140px;
  text-align: center;
  vertical-align: center;
}

<span
  className="c0"
  format="desktopFooter"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is mobileFooter 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  font-size: 15px;
  padding-top: 5px;
}

<span
  className="c0"
  format="mobileFooter"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is mobileHeader 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  width: 33px;
  line-height: 2.5;
  font-size: 15px;
  font-weight: 600;
  margin-right: 10px;
  margin-left: 30px;
  text-align: center;
  border-bottom: 2px solid transparent;
}

<span
  className="c0"
  format="mobileHeader"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is tabletFooter 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  font-size: 15px;
  padding-top: 5px;
}

<span
  className="c0"
  format="tabletFooter"
/>
`;
